Improve task project display and detail page
